update streamlit app and features

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # API Configuration
 API_V1_STR=/api/v1
 PROJECT_NAME="FastAPI LangChain Project"
+CHAT_API_URL=http://localhost:8000/api/v1/chat
 
 # Ollama Configuration
 OLLAMA_BASE_URL=http://localhost:11434
@@ -9,3 +10,7 @@ MODEL_NAME=gemma3
 # Server Configuration
 HOST=0.0.0.0
 PORT=8000
+
+# Security Configuration
+SECRET_KEY="your-secret-key-here"  # 실제 운영 환경에서는 안전한 키로 변경
+ACCESS_TOKEN_EXPIRE_HOURS=24
