--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,21 @@
 [project]
 name = "fastapi-langchain"
 version = "0.1.0"
-description = "Add your description here"
+description = "FastAPI LangChain Chat Application"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.115.12",
     "langchain>=0.3.25",
+    "langchain-ollama>=0.1.0",
+    "streamlit>=1.32.0",
+    "sseclient-py>=1.8.0",
+    "requests>=2.31.0",
+    "bcrypt>=4.0.1",
+    "python-jose>=3.3.0",
+    "cryptography>=42.0.0",
+    "python-multipart>=0.0.7",
+    "sqlalchemy>=2.0.0",
+    "passlib>=1.7.4",
+    "python-dotenv>=1.1.0",
 ]
